[package]
name = "tauri-plugin-upload"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = "Tauri Programme within The Commons Conservancy"
license = "Apache-2.0 OR MIT"
edition = "2021"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = "1.0.0-rc.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.16", features = [ "fs" ] }
tokio-util = { version = "0.7", features = [ "codec" ] }
reqwest = { version = "0.11", features = [ "json", "stream" ] }
futures = "0.3"
read-progress-stream = "1.0.0"
